--- a/contact us.html
+++ b/contact us.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>contact</title>
+    <title>contact me</title>
   </head>
   <body>
-    <h1>contact to me</h1>
+    <h1>contact to us</h1>
   </body>
 </html>
