--- a/contact us.html
+++ b/contact us.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>contact me</title>
+    <title>contact us</title>
   </head>
   <body>
     <h1>contact to us</h1>
